# whmath

./: CMakeLists.txt  README.md
examples/: example.cpp
include/whmath/: .vec.hpp.swp  col.hpp  fxd.hpp  mat.hpp  math.hpp  oct.hpp  per.hpp  qut.hpp  sca.hpp  sed.hpp  ten.hpp  uqv.hpp  vec.hpp
include/whmath/geo/: tri.hpp
